# Messaging-Rust

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
migrations/2023-09-06-103712_create_accounts/: up.sql
src/: consts.rs  diesel_funcs.rs  err.rs  lib.rs  main.rs  models.rs  rocket_funcs.rs  rocket_routes.rs  schema.rs
src/rocket_files/: enums.rs  rocket_funcs.rs  rocket_structs.rs
src/rocket_files/routes/: get_routes.rs  post_routes.rs
static/: client.js  create_account.html  home.html  login.html  shar.css
