[package]
name = "message"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = {version = "1.0", features = ["derive"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono"]}
dotenvy = "0.15"
chrono = { version = "0.4.23", features = ["serde"] }
rand = "0.8.5"